# Qwen3-TTS-Openai-Fastapi

./: .env.example  README.md  bench_tts.py  bench_tts_streaming.py  pyproject.toml
api/backends/: base.py  official_qwen3_tts.py  pytorch_backend.py
api/routers/: openai_compatible.py
api/services/: audio_encoding.py
api/static/: index.html
qwen_tts/core/models/: modeling_qwen3_tts.py
qwen_tts/core/tokenizer_12hz/: modeling_qwen3_tts_tokenizer_v2.py
qwen_tts/inference/: qwen3_tts_model.py
tests/: test_api.py  test_audio_encoding.py  test_backends.py
